src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/cycle-detection-in-delay.tessla
def y: Events[Unit] = delay(5, y)
